static/css/app.css
/* - - - - - - - - -------------------- - - - - - - - - - - -
                          GENERAL
   - - - - - - - - -------------------- - - - - - - - - - -*/

.wrap {
    width: 90%;
    max-width: 1100px;
    margin: 0 auto;
}

.cellwrap {
  padding: 10px 15px;
}

/* - - - - - - - - -------------------- - - - - - - - - - - -
                            NAV
   - - - - - - - - -------------------- - - - - - - - - - -*/


/* - - - - - - - - -------------------- - - - - - - - - - - -
                           HERO
   - - - - - - - - -------------------- - - - - - - - - - -*/

.hero {
    background-color: #999;
    padding: 80px 0px;
    background-image: url("../img/green_cup.png")
}

.hero h1,
.hero p {
  max-width: 70%;
}

/* - - - - - - - - -------------------- - - - - - - - - - - -
                        MAIN SECTION
   - - - - - - - - -------------------- - - - - - - - - - -*/

.main {
    padding: 80px 0px;
}

/* - - - - - - - - -------------------- - - - - - - - - - - -
                          FOOTER
   - - - - - - - - -------------------- - - - - - - - - - -*/

footer {
    background-color: #222;
    padding: 80px 0px;
    background-image: url("../img/grey_boxes.png")
}

footer h4 {
  color: rgba(255, 255, 255, 0.8);
  font-size: 1.3em;
}

footer hr {
  border-color: rgba(255, 255, 255, 0.1);
  margin: 10px 0;
}

footer a {
  display: block;
  color: rgba(255, 255, 255, 0.6);
  font-size: 0.8em;
}

footer a span {
  font-weight: bold;
  color: rgba(255, 255, 255, 0.3);
}

footer a:hover {
  color: rgba(255, 255, 255, 0.8);
}

footer a {
    display: block;
}

